# MBot-Janny-Cpp

./: .gitignore  CMakeLists.txt  DatabaseEntities.hpp  HelperFunctions.hpp  License.md  ReadMe.md  main - Copy.cpp  main.cpp  main2.cpp
Commands/: Avatar.hpp  Ban.hpp  BotInfo.hpp  CommandsList.hpp  DeleteMessages.hpp  Disconnect.hpp  DisplayGuildsData.hpp  Ghost.hpp  Help.hpp  ManageLogs.hpp  MonitorInvites.hpp  OnMessageReceived.hpp  OnRoleCreation.hpp  OnRoleDeletion.hpp  Purge.hpp  PushMe.hpp  ReactionRole.hpp  RegisterApplicationCommands.hpp  ServerInfo.hpp  SetBorderColor.hpp  SetDefaultRole.hpp  StreamAudio.hpp  Test.hpp  UserInfo.hpp  helperfunctions.hpp
Executable/: CMakeLists.txt
